# pymodaq_plugins_tcspc_arduino

./: .gitignore  README.rst  pyproject.toml
src/pymodaq_plugins_tcspc_arduino/daq_viewer_plugins/plugins_1D/: daq_1Dviewer_tcspc_arduino.py
src/pymodaq_plugins_tcspc_arduino/hardware/: tcspc_arduino_controller.py
