## To modify by developer(s) of the plugin

[plugin-info]
SHORT_PLUGIN_NAME = 'tcspc_arduino'
# (pymodaq_plugins_template become pymodaq_plugins_daqmx for instance)

package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_tcspc'
description = 'some word about your plugin'

author = 'Bernhard Lang'
author-email = 'Author email'
license = 'MIT'

[plugin-install]
#packages required for your plugin:
packages-required = ['pymodaq>=4.1.0', 'pyqt5']

[features]  # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = false  # true if plugins contains dashboard extensions
models = false  # true if plugins contains pid models or other models (optimisation...)
h5exporters = false  # true if plugin contains custom h5 file exporters
scanners = false  # true if plugin contains custom scan layout (daq_scan extensions)

[project]
name = "pymodaq_plugins_tcspc_arduino"
version = "0.0.1"

[project.entry-points."pymodaq.plugins"]
'tcspc_arduino' = 'pymodaq_plugins_tcspc_arduino'
